<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/watercolor_world_map"
    android:fillViewport="false"
    tools:context=".LoadActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <com.google.android.material.chip.Chip
            android:id="@+id/chipMap"
            android:layout_width="150dp"
            android:layout_height="75dp"
            android:checkable="false"
            android:text="@string/map"
            android:textSize="15sp"
            android:theme="@style/Theme.MaterialComponents.Light"
            app:chipBackgroundColor="@color/SecondaryA4"
            app:chipIcon="@android:drawable/ic_dialog_map"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipSet"
            android:layout_width="150dp"
            android:layout_height="75dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="75dp"
            android:layout_marginEnd="10dp"
            android:checkable="false"
            android:text="@string/setting"
            android:theme="@style/Theme.MaterialComponents.Light"
            app:chipBackgroundColor="@color/SkyBlue"
            app:chipIcon="@android:drawable/ic_menu_manage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/chipMap" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipInfo"
            android:layout_width="150dp"
            android:layout_height="75dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="75dp"
            android:layout_marginEnd="10dp"
            android:checkable="false"
            android:text="@string/info"
            android:theme="@style/Theme.MaterialComponents.Light"
            app:chipBackgroundColor="@color/DarkSlateGray3"
            app:chipIcon="@android:drawable/ic_menu_info_details"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/chipSet" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipExit"
            android:layout_width="150dp"
            android:layout_height="75dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="75dp"
            android:layout_marginEnd="10dp"
            android:checkable="false"
            android:text="@string/exit"
            android:theme="@style/Theme.MaterialComponents.Light"
            app:chipBackgroundColor="@color/Grey"
            app:chipIcon="@android:drawable/btn_dialog"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/chipInfo" />
    </LinearLayout>
</ScrollView>